--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -1,18 +1,3 @@
-##서버 포트 설정
-#server.port=8080
-#
-##인코딩 UTF-8설정
-#server.servlet.encoding.charset=UTF-8
-#server.servlet.encoding.enabled=true
-#server.servlet.encoding.force=true
-#server.servlet.encoding.force-request=true
-#server.servlet.encoding.force-response=true
-#server.tomcat.uri-encoding=UTF-8
-#
-##뷰리졸버 설정
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
-
 server:
   port: 8080
   servlet:
@@ -32,6 +17,8 @@ spring:
     url: jdbc:mariadb://localhost:3306/springboot_gyeongun?useUnicode=true&serverTimezone=Asia/Seoul&allowMultiQueries=true
     username: root
     password: toor
+  security:    user:      name: test
+      password: 1234
     
 mybatis:  mapper-locations:  - /mappers/*.xml
     
