--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -24,6 +24,24 @@ spring:
             client-secret: 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
             scope:            - email
             - profile
+          naver:
+            client-id: qQWiQ5HboEt3yVv7hmcA
+            client-secret: QjxKDnrjOH
+            scope:            - email
+            - name
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+        provider:
+          naver:
+            authorization-uri:  https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri:  https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response          
     
 mybatis:  mapper-locations:  - /mappers/*.xml
+  
+  
+file: 
+  path: C:/workspace/SpringStudy_workspace/SpringStudy/upload/
     
