--- a/todolist/src/main/resources/application.yml
+++ b/todolist/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
     url: jdbc:mariadb://localhost:3306/todolist?useUnicode=true&serverTimezone=Asia/Seoul&allowMultiQueries=true
     username: root
     password: toor
+  security:
+    user:
+      name: test
+      password: 1234
   web:
     resources:
       static-locations:
