--- a/todolist/src/main/resources/application.yml
+++ b/todolist/src/main/resources/application.yml
@@ -22,6 +22,41 @@ spring:
     user:
       name: test
       password: 1234
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 2da15ba7ca7ce293516f7986b4f7311c
+            client-secret: 7wAaZe94DEPAZlrxaANKHbpsiQwGzzpY
+            scope:
+            - account_email
+            - profile_nickname
+            - profile_image
+            client-authentication-method: POST
+            client-name: Kakao
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+          naver:
+            client-id: qQWiQ5HboEt3yVv7hmcA
+            client-secret: QjxKDnrjOH
+            scope:
+            - email
+            - name
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          
   web:
     resources:
       static-locations:
